--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "babel-polyfill": "^6.3.14",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-stage-2": "^6.3.13",
+    "babel-register": "^6.5.2",
     "babel-runtime": "^6.3.19",
     "babelify": "^7.2.0",
     "browser-sync": "^2.11.1",
@@ -27,7 +28,11 @@
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.1",
     "gulp-util": "^3.0.7",
+    "proxyquire": "^1.7.4",
     "require-dir": "^0.3.0",
+    "rewire": "^2.5.1",
+    "sinon": "^1.17.3",
+    "tape": "^4.4.0",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.7.0"
@@ -35,6 +40,7 @@
   "scripts": {
     "dist": "gulp dist",
     "clean": "gulp dist:clean",
-    "start": "gulp default"
+    "start": "gulp default",
+    "test": "tape -r babel-register test/**/*.js"
   }
 }
