--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "private": true,
   "dependencies": {
     "express": "^4.13.4",
+    "hashids": "^1.0.2",
     "lodash": "^4.5.0",
     "phaser": "^2.4.4"
   },
